--- a/linux.html
+++ b/linux.html
@@ -205,7 +205,7 @@
 		</div>
 	</div>
 	<div class="footer l-box is-center">
-		<a class="my_link_ribbon" href="mailto:remarkableapp@outlook.com" target="_blank">Jamie McGowan</a> 2016 | <a class="my_link_ribbon" href="license.txt" target="_blank">License</a> |2
+		<a class="my_link_ribbon" href="mailto:remarkableapp@outlook.com" target="_blank">Jamie McGowan</a> <script>document.write(new Date().getFullYear())</script> | <a class="my_link_ribbon" href="license.txt" target="_blank">License</a> |2
 		<a class="my_link_ribbon" href="https://github.com/jamiemcg/remarkable" target="_blank">GitHub</a>
 	</div>
 	<script async defer src="https://buttons.github.io/buttons.js"></script>
