--- a/linux.html
+++ b/linux.html
@@ -55,14 +55,15 @@
 		<div class="pure-u-1">
 			<div class="pure-img is-center">
 				<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+				<!-- responsive-default -->
 				<ins class="adsbygoogle"
-					 style="display:block; text-align:center;"
-					 data-ad-layout="in-article"
-					 data-ad-format="fluid"
-					 data-ad-client="ca-pub-1941197189172711"
-					 data-ad-slot="9435102868"></ins>
+					style="display:block"
+					data-ad-client="ca-pub-1941197189172711"
+					data-ad-slot="1996968333"
+					data-ad-format="auto"
+					data-full-width-responsive="true"></ins>
 				<script>
-					 (adsbygoogle = window.adsbygoogle || []).push({});
+				(adsbygoogle = window.adsbygoogle || []).push({});
 				</script>
 			</div>
 		</div>
@@ -117,14 +118,15 @@
 	</div>
 	<div class="pure-u-1">
 		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<!-- responsive-default -->
 		<ins class="adsbygoogle"
-			 style="display:block; text-align:center;"
-			 data-ad-layout="in-article"
-			 data-ad-format="fluid"
-			 data-ad-client="ca-pub-1941197189172711"
-			 data-ad-slot="9435102868"></ins>
+			style="display:block"
+			data-ad-client="ca-pub-1941197189172711"
+			data-ad-slot="1996968333"
+			data-ad-format="auto"
+			data-full-width-responsive="true"></ins>
 		<script>
-			 (adsbygoogle = window.adsbygoogle || []).push({});
+		(adsbygoogle = window.adsbygoogle || []).push({});
 		</script>
 	</div>
 	<div class="pure-g">
@@ -171,14 +173,15 @@
 	<div class="pure-u-1">
 		<div class="pure-img is-center">
 			<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+			<!-- responsive-default -->
 			<ins class="adsbygoogle"
-				 style="display:block; text-align:center;"
-				 data-ad-layout="in-article"
-				 data-ad-format="fluid"
-				 data-ad-client="ca-pub-1941197189172711"
-				 data-ad-slot="9435102868"></ins>
+				style="display:block"
+				data-ad-client="ca-pub-1941197189172711"
+				data-ad-slot="1996968333"
+				data-ad-format="auto"
+				data-full-width-responsive="true"></ins>
 			<script>
-				 (adsbygoogle = window.adsbygoogle || []).push({});
+			(adsbygoogle = window.adsbygoogle || []).push({});
 			</script>
 		</div>
 	</div>
