--- a/linux/download.html
+++ b/linux/download.html
@@ -49,14 +49,15 @@
 		<div class="pure-u-1">
 			<div class="pure-img is-center">
 				<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+				<!-- responsive-default -->
 				<ins class="adsbygoogle"
-					 style="display:block; text-align:center;"
-					 data-ad-layout="in-article"
-					 data-ad-format="fluid"
-					 data-ad-client="ca-pub-1941197189172711"
-					 data-ad-slot="9435102868"></ins>
+					style="display:block"
+					data-ad-client="ca-pub-1941197189172711"
+					data-ad-slot="1996968333"
+					data-ad-format="auto"
+					data-full-width-responsive="true"></ins>
 				<script>
-					 (adsbygoogle = window.adsbygoogle || []).push({});
+				(adsbygoogle = window.adsbygoogle || []).push({});
 				</script>
 			</div>
 		</div>
@@ -105,7 +106,13 @@
 				</div>
 				<div class="is-center">
 					<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-					<ins class="adsbygoogle" style="display:inline-block;width:336px;height:280px" data-ad-client="ca-pub-1941197189172711" data-ad-slot="5197745787"></ins>
+					<!-- responsive-default -->
+					<ins class="adsbygoogle"
+						style="display:block"
+						data-ad-client="ca-pub-1941197189172711"
+						data-ad-slot="1996968333"
+						data-ad-format="auto"
+						data-full-width-responsive="true"></ins>
 					<script>
 					(adsbygoogle = window.adsbygoogle || []).push({});
 					</script>
