--- a/linux/screenshots.html
+++ b/linux/screenshots.html
@@ -62,14 +62,15 @@
 				<div class="pure-u-1">
 					<div class="pure-img is-center">
 						<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+						<!-- responsive-default -->
 						<ins class="adsbygoogle"
-							 style="display:block; text-align:center;"
-							 data-ad-layout="in-article"
-							 data-ad-format="fluid"
-							 data-ad-client="ca-pub-1941197189172711"
-							 data-ad-slot="9435102868"></ins>
+							style="display:block"
+							data-ad-client="ca-pub-1941197189172711"
+							data-ad-slot="1996968333"
+							data-ad-format="auto"
+							data-full-width-responsive="true"></ins>
 						<script>
-							 (adsbygoogle = window.adsbygoogle || []).push({});
+						(adsbygoogle = window.adsbygoogle || []).push({});
 						</script>
 					</div>
 				</div>
@@ -84,8 +85,13 @@
 					</a>
 					<div class="is-center">
 						<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-						<!-- standard-large-rectangle-blue -->
-						<ins class="adsbygoogle" style="display:inline-block;width:336px;height:280px" data-ad-client="ca-pub-1941197189172711" data-ad-slot="5197745787"></ins>
+						<!-- responsive-default -->
+						<ins class="adsbygoogle"
+							style="display:block"
+							data-ad-client="ca-pub-1941197189172711"
+							data-ad-slot="1996968333"
+							data-ad-format="auto"
+							data-full-width-responsive="true"></ins>
 						<script>
 						(adsbygoogle = window.adsbygoogle || []).push({});
 						</script>
@@ -104,8 +110,13 @@
 					</a>
 					<div class="is-center">
 						<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-						<!-- standard-large-rectangle-blue -->
-						<ins class="adsbygoogle" style="display:inline-block;width:336px;height:280px" data-ad-client="ca-pub-1941197189172711" data-ad-slot="5197745787"></ins>
+						<!-- responsive-default -->
+						<ins class="adsbygoogle"
+							style="display:block"
+							data-ad-client="ca-pub-1941197189172711"
+							data-ad-slot="1996968333"
+							data-ad-format="auto"
+							data-full-width-responsive="true"></ins>
 						<script>
 						(adsbygoogle = window.adsbygoogle || []).push({});
 						</script>
@@ -132,8 +143,13 @@
 					</a>
 					<div class="is-center">
 						<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-						<!-- standard-large-rectangle-blue -->
-						<ins class="adsbygoogle" style="display:inline-block;width:336px;height:280px" data-ad-client="ca-pub-1941197189172711" data-ad-slot="5197745787"></ins>
+						<!-- responsive-default -->
+						<ins class="adsbygoogle"
+							style="display:block"
+							data-ad-client="ca-pub-1941197189172711"
+							data-ad-slot="1996968333"
+							data-ad-format="auto"
+							data-full-width-responsive="true"></ins>
 						<script>
 						(adsbygoogle = window.adsbygoogle || []).push({});
 						</script>
@@ -152,8 +168,13 @@
 					</a>
 					<div class="is-center">
 						<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-						<!-- standard-large-rectangle-blue -->
-						<ins class="adsbygoogle" style="display:inline-block;width:336px;height:280px" data-ad-client="ca-pub-1941197189172711" data-ad-slot="5197745787"></ins>
+						<!-- responsive-default -->
+						<ins class="adsbygoogle"
+							style="display:block"
+							data-ad-client="ca-pub-1941197189172711"
+							data-ad-slot="1996968333"
+							data-ad-format="auto"
+							data-full-width-responsive="true"></ins>
 						<script>
 						(adsbygoogle = window.adsbygoogle || []).push({});
 						</script>
