--- a/linux/screenshots.html
+++ b/linux/screenshots.html
@@ -29,6 +29,8 @@
 	ga('require', 'displayfeatures');
 	ga('send', 'pageview');
 	</script>
+
+	<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 	<link rel="stylesheet" href="/fancybox/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
 	<script type="text/javascript" src="/fancybox/jquery.fancybox.pack.js?v=2.1.5"></script>
 	<script type="text/javascript">
