--- a/linux.html
+++ b/linux.html
@@ -69,10 +69,7 @@
 		</div>
 		<h2 class="content-head is-center">Remarkable</h2>
 		<h3 class="content-head is-center">A fully featured markdown editor</h3>
-		<div class="is-center">
-			<iframe width="560" height="315" src="//www.youtube.com/embed/UpjAIcXti9s" frameborder="0" allowfullscreen></iframe>
-		</div>
-		<h3 class="content-head is-center">Features:</h3>
+
 		<div class="pure-g">
 			<div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
 				<h3 class="content-subhead">
@@ -208,7 +205,7 @@
 		</div>
 	</div>
 	<div class="footer l-box is-center">
-		<a class="my_link_ribbon" href="mailto:remarkableapp@outlook.com" target="_blank">Jamie McGowan</a> <script>document.write(new Date().getFullYear())</script> | <a class="my_link_ribbon" href="license.txt" target="_blank">License</a> |2
+		<a class="my_link_ribbon" href="mailto:remarkableapp@outlook.com" target="_blank">Jamie McGowan</a> <script>document.write(new Date().getFullYear())</script> | <a class="my_link_ribbon" href="license.txt" target="_blank">License</a> |
 		<a class="my_link_ribbon" href="https://github.com/jamiemcg/remarkable" target="_blank">GitHub</a>
 	</div>
 	<script async defer src="https://buttons.github.io/buttons.js"></script>
